# rs1_perception

./: CMakeLists.txt  Doxyfile  comprehensive_test.py  debug_test.py  index.dox  minimal_test.py  package.xml  readme.md  simple_test.py  single_test.py  test_event_driven_detection.py
config/: apriltag_params.yaml
doc/html/: annotated.html  annotated_dup.js  apriltag__node_8cpp.html  apriltag__node_8cpp.js  apriltag__node_8cpp__incl.map  apriltag__node_8cpp__incl.md5  apriltag__node_8cpp_source.html  classAprilTagDetectorNode-members.html  classAprilTagDetectorNode.html  classAprilTagDetectorNode.js  classAprilTagDetectorNode__coll__graph.md5  classAprilTagDetectorNode__inherit__graph.map  classes.html  classrs1__perception_1_1PerceptionNode-members.html  classrs1__perception_1_1PerceptionNode.html  classrs1__perception_1_1PerceptionNode.js  classrs1__perception_1_1PerceptionNode__inherit__graph.map  classrs1__perception_1_1PerceptionNode__inherit__graph.md5  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index_8dox.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  (+22 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  apriltag__node_8cpp.tex  apriltag__node_8cpp__incl.md5  classAprilTagDetectorNode.tex  classAprilTagDetectorNode__coll__graph.md5  classrs1__perception_1_1PerceptionNode.tex  classrs1__perception_1_1PerceptionNode__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  namespacers1__perception.tex  namespaces.tex  perception__node_8cpp.tex  perception__node_8cpp__incl.md5  perception__node_8h.tex  perception__node_8h__dep__incl.md5  perception__node_8h__incl.md5  refman.tex
include/: perception_node.h
include/apriltag_detector/: detector.hpp  detector_component.hpp
launch/: april_tag_detector.py  perception.launch.py
src/: apriltag_node.cpp  main.cpp  perception_node.cpp
